# bzr

./: ChangeLog  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  ltmain.sh
.pc/: applied-patches
bindings/: Makefile.in
bindings/python/: Makefile.in
data/: Makefile.in
data/icons/: Makefile.in
debian/: changelog  control  control.in  copyright  glade-3.1  glade-3.install  glade-3.menu  glade-3.xml  glade-3.xpm  glade-gnome-3.install  glade-gnome.install  glade-gtk2.1  glade-gtk2.install  glade-gtk2.manpages  glade-gtk2.menu  glade.install  glade.links  glade.manpages  glade.menu  glade.preinst  libgladeui-1-1.install  libgladeui-1-4.install  libgladeui-1-7.install  libgladeui-1-9.install  libgladeui-1-dev.install  libgladeui-1-dev.links  rules  watch
debian/patches/: 01_gladeui-types.patch  01_gladeui_types_headers.patch  01_launchpad-integration.patch  02_rename_crash.patch  02_spinbutton-adjustment.patch  03_fix-vbox-orientation.patch  04_do_not_escape_utf8.patch  05_rename_binaries_to_gtk2.patch  10_ubuntu_show_embedded_menus.patch  20_python_bindings.patch  90_autoconf.patch  90_linking_doc_in_natty.patch  99_ltmain_as-needed.patch  fix-ftbfs-gtk-doc-linking.patch  link-gmodule.patch  series
doc/: Makefile.in  gladeui.types  version.xml
gladeui/: Makefile.in  glade-marshallers.c  glade-marshallers.h  glade-widget.c
help/: Makefile.in
pixmaps/: Makefile.in
plugins/: Makefile.in
po/: sv.po
src/: Makefile.am  Makefile.in  glade-marshallers.c  glade-marshallers.h
widgets/: Makefile.in  bonobo.xml  canvas.xml  gnome.xml  gtk+.xml
(+115 files in other folders)
